<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFeedbackActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clFeedBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp">


                <TextView
                    android:id="@+id/txtFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Feedback"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="30dp"
                    />

                <LinearLayout
                    android:id="@+id/llAddEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txtFeedback"
                    android:layout_marginTop="20dp"
                    android:weightSum="2"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/txtAddFeedback"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="Add Feedback"
                        android:background="@drawable/bg_button"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:layout_marginEnd="10dp"

                        />

                    <TextView
                        android:id="@+id/txtEditFeedback"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/edit_feedback"
                        android:background="@drawable/bg_button"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        />




                </LinearLayout>
                <TextView
                    android:id="@+id/txtYourFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_feedback"
                    app:layout_constraintTop_toBottomOf="@id/llAddEdit"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/edtEnterFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/bg_edit_text"
                    android:gravity="top"
                    android:hint="@string/writ_your_feedback_here"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtYourFeedback" />


                <TextView
                    android:id="@+id/txtSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/submit"
                    app:layout_constraintTop_toBottomOf="@id/edtEnterFeedback"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="16sp"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>






        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>